--- a/estilos.css
+++ b/estilos.css
@@ -12,6 +12,7 @@ body{
     margin: 150px 15px;
     width: 150px;
     height: 150px;
+    color: #fff;
     background: crimson;
     color: #fff;
     font-size: 40px;
